fix: hide layout page overflow

--- a/src/components/Layout/style.scss
+++ b/src/components/Layout/style.scss
@@ -1,6 +1,7 @@
 .layout {
   width: 100%;
   height: 100vh;
+  overflow-y: hidden;
 
   &__time-balance {
     font-size: 20px;
